# training

./: .gitignore
CUDA/: readme.txt
CUDA/1 Accelerating Applications with CUDA/: 01-add-error-handling.cu  01-basic-parallel.cu  01-double-elements.cu  01-heat-conduction.cu  01-hello-gpu.cu  01-matrix-multiply-2d.cu  01-single-block-loop.cu  01-thread-and-block-idx.cu  01-vector-add.cu  02-mismatched-config-loop.cu  02-multi-block-loop.cu  03-grid-stride-double.cu  AC_CUDA_C.html
CUDA/2 Managing Accelerated Application Memory with CUDA Unified Memory and nvprof/:  01-vector-add_prefetch.cu  01-get-device-properties.cu  01-page-faults.cu  01-saxpy.cu  01-vector-add.cu  01-vector-add_init-in-kernel.cu  AC_UM_NVPROF.html  iteratively-optimized-vector-add-statistics.txt
CUDA/3 Asynchronous Streaming, and Visual Profiling for Accelerated Applications with CUDA C/: 01-manual-malloc-solution.cu  01-prefetch-check-solution.cu  01-print-numbers.cu  01-stream-init-solution.cu  AC_STREAMS_NVVP.html
NVidia/: access.txt
NVidia/Computer Vision/: README
c++/: BinTree.cpp
c++/db/: CMakeLists.txt  solution_gen.cmd  sqlite_demo.cpp
c++/interview_examples/: CMakeLists.txt  google_jan2019.cpp  solution_gen.cmd
c++/network/: !_README  CMakeLists.txt  Makefile  common.cpp  connect_test.cpp  dtls_echo_server.cpp  dtls_echo_server_simple.cpp  dtls_send.cpp  getaddrinfo_test.cpp  gethostname_test.cpp  getsockname_test.cpp  listen_test.cpp  reuseaddr_test.cpp  solution_gen.cmd  tcp_client.cpp  tcp_server.cpp  test_udp_request.cpp  udp_client.cpp  udp_connected_client.cpp  udp_connected_client_nonblocking.cpp  udp_connected_server.cpp  udp_request.cpp  udp_request.hpp  udp_send.cpp  udp_server.cpp  udp_server_nonblocking.cpp  udp_server_select.cpp
c++/network/cert/: dtlsCA.pem  dtlsc.key  dtlsc.pem
c++/skiena/: CMakeLists.txt  CMakeLists.txt.bak  TODO  ex07_01.cpp  solution_gen.cmd
c++/zmq/: CMakeLists.txt  Makefile  client.cpp  server.cpp  solution_gen.cmd  version.cpp
math/: dictionary.txt  gcd_euclid.py  lcm.py
python/: Params.py  Processing_5-29.py  Processing_stoppable.py  ProgStruct.py  Str2Hex.py  Threading.py  Threading2.py  Threading_callback.py  Threading_stoppable.py  Threading_stoppable_socket.py  abstract_class.py  conio.py  conio_test.py  data.npy  datafile.txt  destructor.py  external_process.py  fibo.py  file.txt  file_IO.py  filefind.py  image_readbinary.py  k_min.py  kwargs.py  lmdb.db  lmdb.py  numpy_array_math.py  numpy_demo.py  operator_overloading.py  option_parser.py  print.py  print_color_lnx.py  send_packet_to_network.py  subprocesses.py  thread.py
python/LearningPyBook/: problem15_4.py  problems16.py
python/Net/: tcp_client.py  tcp_server_socket.py  tcp_server_socketserver.py  tcp_server_threading.py  udp_client.py  udp_server_socket.py  udp_server_socketserver.py  urllib_demo1.py
python/common/: k_min.py
python/doc/: network servers.txt  network_servers.vsdx  strings.txt
python/logging/: !_readme.txt  _my_single_module_Example.py  dict_based_config.py  log_rotation.py  log_rotation_custom_namer.py  log_test_format1.py  log_test_format2.py  log_test_simple.py  log_to_file.py  logger_test.py
python/matplotlib/: images.py  matplotlib_image.py  (+1 more)
wireshark/: test.lua  test.pcapng
(+112 files in other folders)
